--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 				<div id="containerarticle">
-					<p id="italic">Retrouvez ici une sélection de livres pour comprendre ce qu'est l'économie sociale et solidaire.</p>
+					<p id="italic">Retrouvez ici une sélection de ressources pour comprendre ce qu'est l'économie sociale et solidaire.</p>
 
 					<article> <!-- RESSOURCE 1 -->
 							<img src="images/imagesLivres/ESPRI_1507_L204.jpg" alt="Pourquoi pas vous ?">
