--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<section id="presentation">
 				<div id="cacherouge">
 					<div id="containercacherouge">
-						<h1>Retrouvez sur cette plateforme des ressources bibliographiques en lien avec lA 47ème Journée Technologique CLUBTEX ...</h1>
+						<h1>Retrouvez sur cette plateforme des ressources bibliographiques en lien avec la 47ème Journée Technologique CLUBTEX ...</h1>
 
 					</div>	
 				</div>
