--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				
 
 		<!-- title -->
-		<title>EUROMATERIALS 2019</title>
+		<title>CLUBTEX</title>
 	</head>
 
 	<body>
@@ -73,7 +73,7 @@
 				</div>
 				<div id="cachenoir">
 					<div id="containercachenoir">
-						<h2>EUROMATERIALS 2019 – 47ème JOURNEE TECHNOLOGIQUE CLUBTEX</h2>
+						<h2>47ème JOURNEE TECHNOLOGIQUE CLUBTEX</h2>
 						<p>A l’occasion de <a href="https://lilliad.univ-lille.fr/evenements/produits-a-usage-temporaire-tour-dhorizon-interrogations-solutions" target="blank">la 47ème Journée Technologique CLUBTEX</a>, retrouvez une sélection bibliographique réalisée par <a href="https://lilliad.univ-lille.fr/disciplines/sciences-pour-lingenieur" target="blank">Frédéric Rosseel</a>, Bibliothécaire de liaison en Sciences Pour l’Ingénieur.</p>	
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 
 
 				<div id="containerarticle">
-					<p id="italic">Retrouvez ici une sélection de ressources liées à EUROMATERIALS.</p>
+					<p id="italic">Retrouvez ici une sélection de ressources liées aux problématiques des produits à usage temporaire.</p>
 
 					<h5>ARTICLES</h5>
 
